k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dentist-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - www.sidiabdoullah.com
      secretName: dentist-tls-secret
  rules:
    - host: www.sidiabdoullah.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dentist
                port:
                  number: 80
